--- a/Views/Shared/_LayoutStore.cshtml
+++ b/Views/Shared/_LayoutStore.cshtml
@@ -18,7 +18,7 @@
     <header>
         <nav class="navbar navbar-fixed-top sticky-top navbar-expand-md navbar-light bg-light mb-3 ">
             <div class="container-fluid">
-                <a class="navbar-brand mr-3" asp-area="" asp-controller="Store" asp-action="Index">Init Store</a>
+                <a class="navbar-brand mr-3" asp-area="" asp-controller="Store" asp-action="Index"><img class="rounded-circle" width="55" src="~/images/site/K&C.jpg" alt="KNC"><strong> K&C</strong><font color="orange"> Electronic Store</font></a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -62,7 +62,7 @@
     <footer>
         <div class="row">
             <div class="col-md-6">
-                &copy; 2020 - Init CMS - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                &copy; 2020 - Powered by <font color="green">Init Myanmar</font>
                                          <button type="button" class="btn btn-social-icon btn-facebook" style="color:blue; border-style:solid; border-color:blue; float:right;"><i class="fa fa-facebook"></i></button>
             </div>
         </div>
