Input box color chages and Dashboard Count

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -23,12 +23,20 @@
             </div>
         </div>
     </div>
-    
+
     <div class="col-sm-3">
         <div class="card card border-danger mb-3" style="max-width: 18rem;">
             <div class="card-header">Total Orders</div>
             <div class="card-body text-danger">
                 <h4 class="card-title">@ViewBag.TotalOrder</h4>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-3">
+        <div class="card card border-success mb-3" style="max-width: 18rem;">
+            <div class="card-header">Today Order</div>
+            <div class="card-body text-danger">
+                <h4 class="card-title">@ViewBag.TodayOrder</h4>
             </div>
         </div>
     </div>
@@ -40,5 +48,5 @@
             </div>
         </div>
     </div>
-   
+
 </div>
