--- a/Views/Shared/_LayoutStore.cshtml
+++ b/Views/Shared/_LayoutStore.cshtml
@@ -16,9 +16,9 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-fixed-top sticky-top navbar-expand-md navbar-light bg-light mb-3 ">
+        <nav class="navbar navbar-fixed-top sticky-top navbar-expand-md navbar-light bg-light mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand mr-3" asp-area="" asp-controller="Store" asp-action="Index"><img class="rounded-circle" width="55" src="~/images/site/K&C.jpg" alt="KNC"><strong> K&C</strong><font color="orange"> Electronic Store</font></a>
+                <a class="navbar-brand mr-3" asp-area="" asp-controller="Store" asp-action="Index"><img class="rounded-circle" width="55" src="~/images/site/K&C.jpg" alt="KNC"><strong> K&C</strong><font class="text-warning"> Electronic Store</font></a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
