Error page edit

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -35,7 +35,7 @@
     <div class="col-sm-3">
         <div class="card card border-success mb-3" style="max-width: 18rem;">
             <div class="card-header">Today Order</div>
-            <div class="card-body text-danger">
+            <div class="card-body text-success">
                 <h4 class="card-title">@ViewBag.TodayOrder</h4>
             </div>
         </div>
