--- a/Views/Shared/_LayoutStore.cshtml
+++ b/Views/Shared/_LayoutStore.cshtml
@@ -8,11 +8,12 @@
     <title>@ViewData["Title"]</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
-    <!--Additional links-->
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+
+    @*<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">*@
+  
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://cdn.tutorialjinni.com/simplePagination.js/1.6/simplePagination.min.css" rel="stylesheet" />
-    
+
 </head>
 <body>
     <header>
@@ -55,23 +56,22 @@
         </nav>
     </header>
     <div class="container">
-        
-            @RenderBody()
-       
+
+        @RenderBody()
+
     </div>
 
-    <hr>
-   
-    <footer>
-        <div class="row">
-            <div class="col-md-6">
-                &copy; 2020 - Powered by <font color="green">Init Myanmar</font>
-                <a type="button" class="btn btn-social-icon btn-facebook" style="color:blue; border-style:solid; border-color:blue; float:right;" href="https://www.facebook.com/KNCES.mm/" ><i class="fa fa-facebook"></i></></a>
-            </div>
-        </div>
-    </footer>	    
+<footer class="border-top footer">
+    <div class="container">
+       
+            &copy; 2020 - Powered by <font color="green">Init Myanmar</font> 
+            <a type="button" class="btn btn-social-icon btn-facebook" style=" margin-top: 10px; color: blue; border-color:blue; border-style: solid; float: right;" href="https://www.facebook.com/KNCES.mm/"><i class="fa fa-facebook"></i></a>
+       
+    </div>
+</footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.tutorialjinni.com/simplePagination.js/1.6/jquery.simplePagination.min.js"></script>
+     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
 </body>
