--- a/Views/Store/Index.cshtml
+++ b/Views/Store/Index.cshtml
@@ -9,23 +9,23 @@
 
 <div class="row">
     <div class="col-lg-3">
+       
         <!-- Search-->
         <input id="myInput" class="form-control border-warning" type="text" placeholder="Search by Name ..." />
         <br />
         <div class="dropdown list-group">
-            <button class="btn border-warning dropdown-toggle" type="button" data-toggle="dropdown">
-                <strong>Categories</strong> 
+            <button class="btn border-warning dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <strong>Categories</strong>
                 <span class="caret"></span>
             </button>
-            <ul class="dropdown-menu border-warning">
+            <div class="dropdown-menu border-warning" aria-labelledby="dropdownMenuButton">
                 @foreach (ProductCategory item in Model.productCategories)
                 {
-                    <li>
-                        <a asp-action="ProductByCategory" asp-route-id="@item.Id" class="list-group-item">@Html.DisplayFor(modelItem => item.Name)</a>
-                        
-                    </li>
+
+                    <a asp-action="ProductByCategory" asp-route-id="@item.Id" class="dropdown-item">@Html.DisplayFor(modelItem => item.Name)</a>
+
                 }
-                </ul>
+            </div>
         </div>
         <br />
     </div>
@@ -43,10 +43,10 @@
             <div class="col-lg-4 col-md-6 mb-4 list-item" data-role="name">
                 <div class="card h-100 border-warning">
 
-                    <a asp-action="Details" asp-route-id="@item.Id"><img class="card-img-top img-fluid" src="@("~/images/" + item.ImagePath)" asp-append-version="true"></a>
+                    <a asp-action="Details" asp-route-id="@item.Id"><img class="card-img-top img-fluid" loading="lazy" src="@("~/images/" + item.ImagePath)" asp-append-version="true"></a>
                     <div class="card-body">
                         <h4 class="card-title">
-                            <a href="#">@Html.DisplayFor(modelItem => item.Name)</a>
+                            <a>@Html.DisplayFor(modelItem => item.Name)</a>
                         </h4>
                         <h5>@Html.DisplayFor(modelItem => item.SellPrice) Ks</h5>
                         <p class="card-text">@Html.DisplayFor(modelItem => item.PCode)</p>
@@ -71,10 +71,7 @@
 
 
 @section scripts{
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <!--Pagination -->
-    <script src="https://cdn.tutorialjinni.com/simplePagination.js/1.6/jquery.simplePagination.min.js"></script>
-
+  
     <script type="text/javascript">
         $(document).ready(function () {
             $("#myInput").on("keyup", function () {
