--- a/Views/Store/Details.cshtml
+++ b/Views/Store/Details.cshtml
@@ -45,7 +45,7 @@
             @Html.DisplayNameFor(model => model.SellPrice)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.SellPrice)
+            @Html.DisplayFor(model => model.SellPrice) MMK
         </dd>
 
     </dl>
