--- a/Views/Store/ProductByCategory.cshtml
+++ b/Views/Store/ProductByCategory.cshtml
@@ -13,13 +13,14 @@
     {
         <div class="col-lg-3 col-md-6 mb-4 list-item" data-role="name">
             <div class="card h-100 border-warning">
-                <a asp-action="Details" asp-route-id="@item.Id"><img class="card-img-top img-fluid" src="@("~/images/" + item.ImagePath)" asp-append-version="true"></a>
+                <a asp-action="Details" asp-route-id="@item.Id"><img class="card-img-top img-fluid" loading="lazy" src="@("~/images/" + item.ImagePath)" asp-append-version="true"></a>
                 <div class="card-body">
-                    <h4 class="card-title">
-                        <a href="#">@Html.DisplayFor(modelItem => item.Name)</a>
-                    </h4>
-                    <h5>@Html.DisplayFor(modelItem => item.SellPrice) Ks</h5>
-                    <p class="card-text">@Html.DisplayFor(modelItem => item.PCode)</p>
+                    <h5 class="card-title">
+                        <a asp-action="Details" asp-route-id="@item.Id">@Html.DisplayFor(modelItem => item.Name)</a>
+                    </h5>
+                    <p class="card-text">Code : @Html.DisplayFor(modelItem => item.PCode)</p>
+                    <h5>Price : @Html.DisplayFor(modelItem => item.SellPrice) MMK</h5>
+
                 </div>
                 <div class="card-footer">
                     <a asp-action="AddToShoppingCart" asp-route-productId="@item.Id" asp-controller="ShoppingCart" class="btn btn-success"><i class="fa fa-cart-plus mr-2"></i> Add to cart</a>
@@ -47,7 +48,7 @@
 
             var items = $('.list-item');
             var numItems = items.length;
-            var perPage = 8;
+            var perPage = 16;
             items.slice(perPage).hide();
 
             $("#pagination-container").pagination({
