--- a/Views/Store/Index.cshtml
+++ b/Views/Store/Index.cshtml
@@ -43,11 +43,11 @@
             <div class="col-lg-4 col-md-6 mb-4 list-item" data-role="name">
                 <div class="card h-100 border-warning">
 
-                    <a asp-action="Details" asp-route-id="@item.Id"><img class="card-img-top img-fluid" loading="lazy" src="@("~/images/" + item.ImagePath)" asp-append-version="true"></a>
+                    <a asp-action="Details" asp-route-id="@item.Id"><img class="card-img-top img-fluid" alt="@(item.ImagePath)" loading="lazy" src="@("~/images/" + item.ImagePath)" asp-append-version="true"></a>
                     <div class="card-body">
-                        <h6 class="card-title">
+                        <h5 class="card-title">
                             <a asp-action="Details" asp-route-id="@item.Id">@Html.DisplayFor(modelItem => item.Name)</a>
-                        </h6>
+                        </h5>
                         <p class="card-text">Code : @Html.DisplayFor(modelItem => item.PCode)</p>
                         <h6>Price : @Html.DisplayFor(modelItem => item.SellPrice) MMK</h6>
 
@@ -72,12 +72,13 @@
 
 @section scripts{
   
+    
     <script type="text/javascript">
         $(document).ready(function () {
             $("#myInput").on("keyup", function () {
                 var value = $(this).val().toLowerCase();
                 $('div[data-role = "name"]').filter(function () {
-                    $(this).toggle($(this).find('h4').text().toLowerCase().indexOf(value) > -1)
+                    $(this).toggle($(this).find('h5').text().toLowerCase().indexOf(value) > -1)
                 });
             });
 
