--- a/Views/Categories/Index.cshtml
+++ b/Views/Categories/Index.cshtml
@@ -4,13 +4,14 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h5>Category List</h5>
+<hr />
 
 <p>
     <a asp-action="Create">Create New</a>
 </p>
 <table class="table">
-    <thead>
+    <thead style="background-color: gainsboro">
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.CatTitle)
@@ -31,9 +32,9 @@
                 @Html.DisplayFor(modelItem => item.CatDescription)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.CatId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.CatId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.CatId">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.CatId"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a> 
+                <a asp-action="Details" asp-route-id="@item.CatId"><i class="fa fa-info-circle" aria-hidden="true"></i></a> 
+                <a asp-action="Delete" asp-route-id="@item.CatId"><i class="fa fa-trash" aria-hidden="true"></i></a>
             </td>
         </tr>
 }
