--- a/Views/Products/Create.cshtml
+++ b/Views/Products/Create.cshtml
@@ -30,7 +30,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
+                <textarea asp-for="Description" class="form-control"></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -42,16 +42,6 @@
                 <label asp-for="SellPrice" class="control-label"></label>
                 <input asp-for="SellPrice" class="form-control" />
                 <span asp-validation-for="SellPrice" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="InStock" class="control-label"></label>
-                <input asp-for="InStock" class="form-control" />
-                <span asp-validation-for="InStock" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Sale" class="control-label"></label>
-                <input asp-for="Sale" class="form-control" />
-                <span asp-validation-for="Sale" class="text-danger"></span>
             </div>
 
             <div class="form-group">
