--- a/Views/Products/Details.cshtml
+++ b/Views/Products/Details.cshtml
@@ -12,7 +12,6 @@
         <dt class="col-sm-2">
             <!--  @Html.DisplayNameFor(model => model.ImagePath) -->
         </dt> 
-
         <dd class="col-sm-10">
             <img src="@("~/images/" + Model.ImagePath)" asp-append-version="true" width="200" height="300" />
         </dd>
@@ -45,7 +44,7 @@
             @Html.DisplayNameFor(model => model.Description)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Description)
+            <span style="white-space: pre-line"> @Html.DisplayFor(model => model.Description) </span>
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.PurchasePrice)
@@ -59,18 +58,7 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.SellPrice)
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.InStock)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.InStock)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Sale)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Sale)
-        </dd>
+        
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.CreatedDate)
         </dt>
