--- a/Views/Store/Details.cshtml
+++ b/Views/Store/Details.cshtml
@@ -11,11 +11,11 @@
     <dl class="row">
 
         <dt class="col-sm-2">
-            <!--  @Html.DisplayNameFor(model => model.ImagePath) -->
+            
         </dt>
 
         <dd class="col-sm-10">
-            <img src="@("~/images/" + Model.ImagePath)" asp-append-version="true" width="250" height="250" />
+            <img src="@("~/images/" + Model.ImagePath)" alt="electronic goods detail" asp-append-version="true" width="250" height="250" />
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
@@ -39,7 +39,7 @@
             @Html.DisplayNameFor(model => model.Description)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Description)
+            <span style="white-space: pre-line"> @Html.DisplayFor(model => model.Description)</span>
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.SellPrice)
