--- a/Views/Reports/Index.cshtml
+++ b/Views/Reports/Index.cshtml
@@ -9,7 +9,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <h6>Daily Sale</h6>
+        <h6>Daily Orders</h6>
         <form asp-action="DailySale">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
@@ -24,7 +24,7 @@
             </div>
         </form>
         <hr />
-        <h6>Monthly Sale</h6>
+        <h6>Monthly Orders</h6>
         <form asp-action="MonthlySale">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
